objects/Residence__c.object
<CustomObject>
    <description>To capture detailed information about residences related to client cases, including mortgage details, insurance costs, and rent.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Residences</relationshipLabel>
        <relationshipName>Residences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colonias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Colonias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Residences</relationshipLabel>
        <relationshipName>Residences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentResidence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Residence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyHazardInsurance__c</fullName>
        <label>Monthly Hazard Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyHomeAssociation__c</fullName>
        <label>Monthly Home Association</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyMortgageInsurance__c</fullName>
        <label>Monthly Mortgage Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyOther__c</fullName>
        <label>Monthly Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyRETaxes__c</fullName>
        <label>Monthly RE Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyRent__c</fullName>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <label>Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PurchasePrice__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResidenceType__c</fullName>
        <label>Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Own - Empowerment Zone</fullName>
                </value>
                <value>
                    <fullName>Own - Enterprise &amp; Empowerment Zone</fullName>
                </value>
                <value>
                    <fullName>Own - Enterprise Zone</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Rent - Empowerment Zone</fullName>
                </value>
                <value>
                    <fullName>Rent - Enterprise &amp; Empowerment Zone</fullName>
                </value>
                <value>
                    <fullName>Rent - Enterprise Zone</fullName>
                </value>
                <value>
                    <fullName>Rent property not owned/managed by your org</fullName>
                </value>
                <value>
                    <fullName>Rent property owned/managed buy your org</fullName>
                </value>
                <value>
                    <fullName>Staying with family/friends</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeatResidenceMonths__c</fullName>
        <label>Time at Residence (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeatResidenceYears__c</fullName>
        <label>Time at Residence (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>firstMortgage__c</fullName>
        <label>1st Mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>secondMortgage__c</fullName>
        <label>2nd Mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Residence</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Residence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>